kubernetes/apps/network/internal/home-reverse-proxy/aruba-proxy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aruba-proxy
  namespace: network
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames: ["aruba.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: aruba-proxy
