kubernetes/apps/network/internal/home-reverse-proxy/other-proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: used-nas-proxy
  namespace: network
spec:
  type: ExternalName
  externalName: openmediavault-used.manor

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app used-nas-proxy
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - &host "used.${SECRET_DOMAIN}"
      secretName: ${SECRET_DOMAIN/./-}-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: used-nas-proxy
  namespace: network
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https-main
  hostnames: ["used.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: used-nas-proxy
