kubernetes/apps/network/internal/home-reverse-proxy/proxmox-proxy.yaml
## Circe
---
apiVersion: v1
kind: Service
metadata:
  name: circe-proxy
  namespace: network
spec:
  type: ExternalName
  externalName: circe.manor

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: circe-proxy
  namespace: network
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames: ["circe.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: circe-proxy
## Athena
---
apiVersion: v1
kind: Service
metadata:
  name: athena-proxy
  namespace: network
spec:
  type: ExternalName
  externalName: athena.manor

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: athena-proxy
  namespace: network
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames: ["athena.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: athena-proxy
