kubernetes/apps/network/internal/home-reverse-proxy/switches-proxy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aruba-proxy
  namespace: network
spec:
  parentRefs:
    - { name: internal, namespace: network }
  hostnames: ["aruba.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - { group: gateway.envoyproxy.io, kind: Backend, name: aruba-proxy }
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: brocade-proxy
  namespace: network
spec:
  parentRefs:
    - { name: internal, namespace: network }
  hostnames: ["brocade.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - { group: gateway.envoyproxy.io, kind: Backend, name: brocade-proxy }
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: css326-proxy
  namespace: network
spec:
  parentRefs:
    - { name: internal, namespace: network }
  hostnames: ["css326.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - { group: gateway.envoyproxy.io, kind: Backend, name: css326-proxy }
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nray-house-proxy
  namespace: network
spec:
  parentRefs:
    - { name: internal, namespace: network }
  hostnames: ["nray-house.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - { group: gateway.envoyproxy.io, kind: Backend, name: nray-house-proxy }
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nray-shop-proxy
  namespace: network
spec:
  parentRefs:
    - { name: internal, namespace: network }
  hostnames: ["nray-shop.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - { group: gateway.envoyproxy.io, kind: Backend, name: nray-shop-proxy }
